syntax = "proto3";

package log;

import "common.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/compozy/compozy/pkg/pb";

enum LogLevel {
  LOG_LEVEL_UNSPECIFIED = 0;
  LOG_LEVEL_DEBUG = 1;
  LOG_LEVEL_INFO = 2;
  LOG_LEVEL_WARN = 3;
  LOG_LEVEL_ERROR = 4;
}

// -----------------------------------------------------------------------------
// Events
// -----------------------------------------------------------------------------

message EventLogEmitted {
  common.LogMetadata metadata = 1;

  message Details {
    LogLevel log_level = 1;
    string component = 2;
    string component_id = 3;
    string message = 4;
    google.protobuf.Timestamp time = 5;
  }
  Details details = 2;
}
